--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -3,6 +3,7 @@
   @include media-breakpoint-up(sm) {
     display: block;
     width: 150px;
+    margin-bottom: 6px;
   }
   img {
     width: 100%;
