--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -1,11 +1,12 @@
 .main-menu {
   height: inherit;
+  align-self: flex-end;
   display: none;
   @include media-breakpoint-up(md) {
     display: block;
   }
   > ul {
-    height: inherit;
+    height: 28px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -25,10 +26,11 @@
         display: inline-block;
         padding: 0;
         font-size: 1rem;
-        font-weight: 100;
+        font-weight: 300;
+        letter-spacing: 1px;
         text-transform: uppercase;
         color: inherit;
-        padding: 10px 14px 10px 14px;
+        padding: 2px 14px;
         text-decoration: none;
         &:hover {
           background: $primary;
