--- a/src/scss/components/_hamburger.scss
+++ b/src/scss/components/_hamburger.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
   height: 50px;
   width: 50px;
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     display: none;
   }
   &:focus {
