--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -1,15 +1,18 @@
 .main-menu {
   height: inherit;
-  align-self: flex-end;
+  align-self: center;
   display: none;
-  @include media-breakpoint-up(md) {
-    display: block;
+  @include media-breakpoint-up(lg) {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
   }
   > ul {
     height: 28px;
+    width: 400px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     list-style: none;
     margin: 0;
     padding: 0;
