--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -24,7 +24,7 @@
       &:last-of-type {
         margin: 0;
       }
-      > a {
+      > .link {
         height: inherit;
         display: inline-block;
         padding: 0;
@@ -42,7 +42,7 @@
       }
     }
     > li.active {
-      > a {
+      > .link {
         background: $primary;
         text-decoration: none;
         color: #fff;
