desktop dropdowns working and home view setup

--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -17,9 +17,10 @@
 $grid-gutter-width: 20px;
 
 $white: #ffffff;
+$grey: #222;
 $black: #000000;
 $primary: #266491;
-$secondary: #444;
+$secondary: #fdb834;
 
 // Links
 $link-color: $primary;
