--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,7 +26,7 @@
     color: white;
   }
   .footer-title {
-    color: #212529;
+    color: white;
     font-size: 2rem;
     font-family: $font-family-heading;
     margin-bottom: 10px;
