--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 65px;
   color: $white;
-  background-color: #fdb834;
+  background-color: $secondary;
   display: flex;
   justify-content: space-between;
   align-items: center;
