--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,1 +1,13 @@
-
+.main {
+    height: calc(100vh - 65px);
+    width: 100vw;
+    color: $grey;
+    .container {
+        margin: auto;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }    
+}
