--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,6 +2,14 @@
     height: calc(100vh - 65px);
     width: 100vw;
     color: $grey;
+    .video-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
     .container {
         margin: auto;
         height: 100%;
