--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,12 +3,14 @@
     width: 100vw;
     color: $grey;
     .video-bg {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
+        background-image: url("../images/undraw_businesswoman_pc12.svg");
+        background-size: cover;
     }
     .container {
         margin: auto;
@@ -17,5 +19,18 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        .text-div {
+            background-color: white;
+            text-align: center;
+            padding: 1rem;
+            border-radius: 1rem;
+            h1 {
+                color: $primary;
+            }
+            p {
+                color: $secondary;
+                margin-bottom: 0;
+            }
+        }
     }    
 }
