--- a/src/scss/components/_main-menu-mobile.scss
+++ b/src/scss/components/_main-menu-mobile.scss
@@ -94,6 +94,13 @@ $button-width: 35px;
       &:nth-of-type(6) {
         animation-delay: 0.6s;
       }
+      .mobile-dropdown {
+          font-size: 18px;
+          a {
+              margin: 0.5rem;
+          }
+          
+      }
     }
   }
   ul {
