--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,15 +2,18 @@
     height: calc(100vh - 65px);
     width: 100vw;
     color: $grey;
-    .video-bg {
-        position: fixed;
-        top: 0;
+    .video-bg-container {
+        position: absolute;
+        top: 65px;
         left: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
-        background-image: url("../images/undraw_businesswoman_pc12.svg");
-        background-size: cover;
+        .video-bg {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
     .container {
         margin: auto;
@@ -20,7 +23,7 @@
         justify-content: center;
         align-items: center;
         .text-div {
-            background-color: white;
+            background-color: rgba($color: #fff, $alpha: 0.9);
             text-align: center;
             padding: 1rem;
             border-radius: 1rem;
@@ -30,6 +33,7 @@
             p {
                 color: $secondary;
                 margin-bottom: 0;
+                font-size: 20px;
             }
         }
     }    
