--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -39,7 +39,7 @@
     font-size: 1.1rem;
     font-weight: lighter;
     line-height: 1.4;
-    color: $secondary;
+    color: $grey;
     @include media-breakpoint-up(sm) {
       width: 70%;
     }
