--- a/src/scss/pages/what-we-do/_what-we-do.scss
+++ b/src/scss/pages/what-we-do/_what-we-do.scss
@@ -66,7 +66,65 @@
   }
 }
 
-.whatwedo-item:hover {
-  transform: scale(1.1);
-  transition: all 0.25s ease-in;
+.card {
+  background-clip: inherit;
+  overflow: hidden;
+  padding: 1rem;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.what-we-do-card {
+  border-radius: 1rem;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.card-mask {
+  border-radius: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba($primary, 0.8);
+  overflow: hidden;
+}
+
+.card-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  z-index: 2;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  h4 {
+    color: $white;
+
+  }
+  .service-text {
+    color: $white;
+    font-size: 18px;
+  }
+}
+
+.card:hover {
+  .what-we-do-card {
+    transform: scale(1.02);
+    transition: all 0.25s ease-in;
+    box-shadow: 2px 2px 2px #d7d7d7;
+  }
+}
+
+
