--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,10 @@
 
 #___gatsby {
     scroll-behavior: smooth;
+    font-family: $font-family-base;
+    font-weight: $font-weight-base;
+    font-size: $font-size-base;
+    color: $font-color-base;
 }
 
 // Display breakpoints for DEV
