--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -17,7 +17,7 @@
     padding-bottom: 100px;
   }
   h1 {
-    color: $primary;
+    color: $white;
     font-size: 2.4rem;
     line-height: 1.2;
     font-family: $font-family-heading;
@@ -36,10 +36,8 @@
   }
   p {
     width: 80%;
-    font-size: 1.1rem;
-    font-weight: lighter;
     line-height: 1.4;
-    color: $grey;
+    color: $white;
     @include media-breakpoint-up(sm) {
       width: 70%;
     }
