--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,62 +1,29 @@
-.main {
-    height: calc(100vh - 65px);
-    width: 100vw;
-    color: $grey;
-    .video-bg-container {
+
+.video-bg-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    .video-mask {
+        background-color: rgba($color: $darkBlue, $alpha: 0.4);
         position: absolute;
-        top: 65px;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
-        .video-mask {
-            background-color: rgba($color: #fff, $alpha: 0.4);
-            position: absolute;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-        .video-bg {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-        }
+        z-index: 1;
     }
-    .container {
-        margin: auto;
+    .video-bg {
+        object-fit: cover;
+        width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        .text-div {
-            background-color: rgba($color: #fff, $alpha: 0.9);
-            text-align: center;
-            padding: 1rem 2rem;
-            border-radius: 1rem;
-            h1, h2, h3, h4 {
-                color: $primary;
-                margin: 1rem;
-                a {
-                    text-decoration: underline;
-                    text-decoration-color: $secondary;
-                }
-                a:hover {
-                    color: $primary;
-                    text-decoration-color: $primary;
-                }
-            }
-            p {
-                color: $grey;
-                margin: 1rem auto;
-                font-size: 22px;
-                max-width: 440px;
-                a {
-                    font-size: inherit;
-                    color: $secondary;
-                }
-            }
-        }
-    }    
+    }
+}
+a {
+    color: $secondary;
+}
+
+p {
+    font-size: 1.2rem;
 }
