--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,3 +1,11 @@
+.landing-intro {
+    h1 {
+        color: $white;
+    }
+    p {
+        color: $white;
+    }
+}
 
 .video-bg-container {
     position: fixed;
