--- a/src/scss/components/_card-two.scss
+++ b/src/scss/components/_card-two.scss
@@ -33,9 +33,12 @@
         line-height: 1.3;
       }
     }
-    .card-meta {
-      flex: 1 0 auto;
-    }
+  }
+
+  .card-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
