--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -17,7 +17,7 @@
     padding-bottom: 100px;
   }
   h1 {
-    color: $white;
+    color: $primary;
     font-size: 2.4rem;
     line-height: 1.2;
     font-family: $font-family-heading;
@@ -37,7 +37,7 @@
   p {
     width: 80%;
     line-height: 1.4;
-    color: $white;
+    color: $font-color-base;
     @include media-breakpoint-up(sm) {
       width: 70%;
     }
