--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,7 +62,9 @@
 
 // Pages
 @import 'pages/home';
-@import 'pages/team/page-teams';
+@import 'pages/about/about';
+@import 'pages/contact/contact';
+@import 'pages/news/news';
 @import 'pages/what-we-do/page-what-we-do';
 @import 'pages/what-we-do/what-we-do';
 @import 'pages/case-studies/page-case-studies';
