--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -34,10 +34,10 @@ $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'Montserrat', 'Open Sans', 'Helvetica Neue', Arial, sans-serif,
+$font-family-base: 'Montserrat', 'Calibri', 'Helvetica Neue', Arial, sans-serif,
   -apple-system;
 $font-family-heading: 'Montserrat', 'Helvetica Neue', Arial, sans-serif, -apple-system;
-$font-size-base: 1.1rem; // Assumes the browser default, typically `16px`
+$font-size-base: 1.2rem; 
 $font-color-base: $grey;
 $font-weight-thin: 200;
 $font-weight-light: 300;
