--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding-top: 200px;
   padding-bottom: 100px;
+  z-index: 10;
   @include media-breakpoint-up(sm) {
     padding-top: 160px;
     padding-bottom: 80px;
