--- a/src/scss/components/_main-menu-mobile.scss
+++ b/src/scss/components/_main-menu-mobile.scss
@@ -79,6 +79,7 @@ $button-width: 35px;
     li {
       animation: fadeInRight 0.5s ease forwards;
       animation-delay: 0.35s;
+      font-weight: bold;
       &:nth-of-type(2) {
         animation-delay: 0.4s;
       }
