--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -37,6 +37,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         transition: all 225ms ease-in 0s;
+        box-shadow: 0 10px 5px -5px rgba(50, 50, 93, 0.2);
       }
       > .link {
         height: inherit;
