--- a/src/scss/pages/contact/_contact.scss
+++ b/src/scss/pages/contact/_contact.scss
@@ -2,4 +2,12 @@
     h1, h2, h3, h4 {
         color: $primary;
     }
+    .call {
+        margin-bottom: 3rem;
+        font-size: 1.3rem;
+        a {
+            color: $primary;
+            text-decoration: underline;
+        }
+    }
 }
