--- a/src/scss/pages/what-we-do/_what-we-do.scss
+++ b/src/scss/pages/what-we-do/_what-we-do.scss
@@ -1,71 +1,3 @@
-.testimonial {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
-  .testimonials-image {
-    flex: 0;
-    margin-right: 10px;
-    img {
-      width: 160px;
-    }
-  }
-  .testimonials-meta {
-    flex: 1;
-    margin-bottom: 10px;
-    p {
-      margin-bottom: 0;
-    }
-    a {
-    }
-  }
-  .testimonials-title {
-    margin-bottom: 5px;
-  }
-  .testimonials-name {
-    font-weight: bold;
-    display: inline-block;
-    margin-right: 10px;
-  }
-  .testimonials-jobtitle {
-    display: inline-block;
-    color: $secondary;
-  }
-  .testimonials-content {
-    flex: 1 0 100%;
-
-    blockquote {
-      display: block;
-      border-width: 2px 0 0 0;
-      border-style: solid;
-      border-color: #eee;
-      padding: 1.5em 0 0.5em;
-      margin: 1.5em 0;
-      position: relative;
-    }
-    blockquote:before {
-      content: '\201C';
-      position: absolute;
-      top: 0em;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #fff;
-      width: 3rem;
-      height: 2rem;
-      font: 6em/1.08em 'PT Sans', sans-serif;
-      color: $primary;
-      text-align: center;
-    }
-    // blockquote:after {
-    //   content: "\2013 \2003" attr(cite);
-    //   display: block;
-    //   text-align: right;
-    //   font-size: 0.875em;
-    //   color: #e74c3c;
-    // }
-  }
-}
-
 .what-we-do-cards {
   justify-content: center;
 }
@@ -162,6 +94,20 @@
 
 .mask-section {
   background-color: rgba($white, 0.9);
+  img {
+    margin: 2rem auto;
+    width: 210px;
+    height: 400px;
+  }
+  .healthinote-desc {
+    width: 700px;
+    margin: 1rem;
+  }
 }
 
+.blog-post-content {
+  li {
+    font-size: $font-size-base !important;
+  }
+}
 
